bug no text-align

--- a/stilo.css
+++ b/stilo.css
@@ -42,6 +42,7 @@ header{
     background-image:linear-gradient(to bottom,var(--cor3),var(--cor5));
     min-height: 150px;
     padding-top: 40px;
+    text-align: center;
 }
 
 header > h1 {
@@ -51,7 +52,7 @@ header > h1 {
     font-size: 3em;
     font-weight: normal;
     margin-bottom: 20px;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.207) ;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.207) ;
 }
 
 header p {
@@ -191,6 +192,7 @@ footer{
     text-align: center;
     font-size: 0.8em;
     padding: 5px;
+    margin: auto;
 }
 
 footer a {
